--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "npm --prefix ./web-frontend run build",
-  "outputDirectory": "web-frontend/dist"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "root": "web-frontend"
 }
