--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-  "projects": [
+  "builds": [
     {
-      "name": "web-frontend",
-      "rootDirectory": "web-frontend"
+      "src": "web-frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "web-frontend/dist/index.html"
     }
   ]
 }
